Se creo la region sub_content

--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -101,7 +101,7 @@
     </main>
 </div>{# /.layout-container #}
 {% if page.sub_content %}
-    <div>
+    <div class="tw-container tw-mx-auto tw-py-12 tw-px-4">
         {{ page.sub_content }}
     </div>
 {% endif %}
