--- a/web/themes/custom/tailwindcss/templates/node/node--galeria--teaser.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--galeria--teaser.html.twig
@@ -1,5 +1,5 @@
 <div class="galeria teaser" {{ attributes.addClass(classes) }}>
-    <div class="image">
+    <div class="image mb-4">
         {% if node.hasField('field_image') %}
             {{ content.field_image }}
         {% endif %}
