--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -10,7 +10,8 @@
     bottom: 30px;
     left: 30px;
     font-family: $font-body;
-    @apply absolute text-white text-3xl leading-none font-semibold;
+    line-height: 1.2em;
+    @apply absolute text-white text-3xl font-semibold;
     a{
       @apply text-white;
     }
@@ -113,7 +114,7 @@
     @apply p-0;
   }
   .ui-widget-header.ui-tabs-nav.ui-corner-all{
-    @apply border-0 bg-transparent rounded-none p-0 flex flex-no-wrap mb-2;
+    @apply border-0 bg-transparent rounded-none p-0 flex flex-no-wrap mb-4;
     .ui-tabs-tab{
       font-family: $font-title;
       @apply bg-gray-650 m-0 text-white border-0 rounded-none flex-1;
