--- a/web/themes/custom/tailwindcss/templates/node/node--gol-partido--video-player.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--gol-partido--video-player.html.twig
@@ -9,7 +9,7 @@
             <a href="{{ url }}"><img src="/themes/custom/tailwindcss/images/icons/play.png" alt="Play" class="play-icon tw-h-24 tw-w-24 opacity-100"></a>
         </div>
     </div>
-    <div class="title max-w-xl">
+    <div class="title">
         <div class="tw-relative">
             <div class="torneo category left-0">{{ content.field_torneo }}</div>
             <a href="{{ url }}">{{ label }}</a>
