--- a/web/themes/custom/tailwindcss/templates/node/node--columna-blog--home-destacado.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--columna-blog--home-destacado.html.twig
@@ -1,4 +1,4 @@
-<div class="opinion teaser" {{ attributes.addClass(classes) }}>
+<div class="opinion home-destacado" {{ attributes.addClass(classes) }}>
     <div class="image">
         {% if node.hasField('field_image') %}
             {{ content.field_image }}
