--- a/web/themes/custom/tailwindcss/templates/node/node--columna-blog--teaser.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--columna-blog--teaser.html.twig
@@ -4,9 +4,10 @@
             {{ content.field_image }}
         {% endif %}
     </div>
-    <div class="title tw-text-3xl py-4">
+    <div class="tw-text-sm">
         <a href="{{ url }}">{{ label }}</a>
     </div>
+    <div class="tw-mr-6 published_date">{{ node.getCreatedTime() | format_date('complete_date') }}</div>
     <div class="pb-4" {{ author_attributes }}>
         {{ author_picture }}
     </div>
