--- a/web/themes/custom/tailwindcss/templates/node/node--article--home-destacado.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--article--home-destacado.html.twig
@@ -1,4 +1,4 @@
-<div class="article home-destacado flex" {{ attributes.addClass(classes) }}>
+<div class="article home-destacado flex mb-8" {{ attributes.addClass(classes) }}>
     <div class="image tw-w-6/12">
         {% if node.hasField('field_image') %}
             {{ content.field_image }}
