--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -443,6 +443,11 @@
     @apply w-1/2 px-2 mb-4;
   }
 }
+.torneo-videos-list{
+  .views-field-field-image{
+    @apply mb-4; 
+  }
+}
 iframe.iframe-futbolred {
   body {
     padding: 0 !important;
