--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -67,7 +67,8 @@
   }
 }
 
-#block-views-block-goles-home-block-1{
+#block-views-block-goles-home-block-1,
+#block-views-block-videos-opinion-block-1{
   @apply border-b border-gray;
   div div{
     @apply flex flex-wrap;
