--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -79,7 +79,7 @@
         <div>
             {{ page.fullcontent }}
         </div>
-        <div class="md:tw-flex tw--mx-4 tw-w-full">
+        <div class="md:tw-flex tw--mx-4">
             {% if page.sidebar_first %}
                 <aside class="md:tw-w-1/3 tw-p-4" role="complementary">
                     {{ page.sidebar_first }}
@@ -88,7 +88,7 @@
                 {{ page.content }}
                 </div>{# /.layout-content #}
             {% else %}
-                <div class="tw-p-4 tw-flex-1">
+                <div class="tw-p-4 tw-flex-1 tw-w-full">
                 {{ page.content }}
                 </div>{# /.layout-content #}
             {% endif %}
