--- a/web/themes/custom/tailwindcss/templates/field/field--field-mediastream.html.twig
+++ b/web/themes/custom/tailwindcss/templates/field/field--field-mediastream.html.twig
@@ -1,15 +1,15 @@
 {% if multiple %}
     <div{{ attributes }}>
         {% for item in items %}
-            <div{{ item.attributes }}>
-                <iframe src="https://s3.amazonaws.com/WidgetFutbolRed/embed.html?code={{ item.content }}" width="100%" height="314" frameborder="0" allow="autoplay; fullscreen" allowfullscreen="" allowscriptaccess="always" scrolling="no" style="width: 100%; height: 314.438px;"></iframe>
+            <div{{ item.attributes.addClass('tw-w-full') }}>
+                <iframe src="https://s3.amazonaws.com/WidgetFutbolRed/embed.html?code={{ item.content }}" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen="" allowscriptaccess="always" scrolling="no" style="width: 100%; height: 100%;"></iframe>
             </div>
         {% endfor %}
     </div>
 {% else %}
     {% for item in items %}
-        <div{{ attributes }}>
-            <iframe src="https://s3.amazonaws.com/WidgetFutbolRed/embed.html?code={{ item.content }}" width="100%" height="314" frameborder="0" allow="autoplay; fullscreen" allowfullscreen="" allowscriptaccess="always" scrolling="no" style="width: 100%; height: 314.438px;"></iframe>
+        <div{{ attributes.addClass('tw-w-full') }}>
+            <iframe src="https://s3.amazonaws.com/WidgetFutbolRed/embed.html?code={{ item.content }}" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen; encrypted-media" allowfullscreen="" allowscriptaccess="always" scrolling="no" style="width: 100%; height: 100%;"></iframe>
         </div>
     {% endfor %}
 {% endif %}
