--- a/web/themes/custom/tailwindcss/templates/node/node--gol-partido--video-player.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--gol-partido--video-player.html.twig
@@ -6,7 +6,12 @@
             {{ content.field_image }}
         {% endif %}
         <div class="tw-absolute tw-top-0 tw-left-0 play-icon tw-w-full tw-h-full tw-flex tw-items-center tw-justify-center">
-            <a href="{{ url }}"><img src="/themes/custom/tailwindcss/images/icons/play.png" alt="Play" class="play-icon tw-h-24 tw-w-24 opacity-100"></a>
+            <a href="#" onclick="jQuery('.mediastream-{{ node.id }}').removeClass('tw-hidden');"><img src="/themes/custom/tailwindcss/images/icons/play.png" alt="Play" class="play-icon tw-h-24 tw-w-24 opacity-100"></a>
+        </div>
+        <div class="mediastream mediastream-{{ node.id }} tw-absolute tw-w-full tw-h-full tw-hidden">
+            {% if node.hasField('field_mediastream') %}
+                {{ content.field_mediastream }}
+            {% endif %}
         </div>
     </div>
     <div class="title">
