--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -474,7 +474,7 @@
 .torneo-noticias-list .views-infinite-scroll-content-wrapper{
   @apply flex flex-wrap;
   .views-row{
-    @apply w-1/2 px-2 mb-4;
+    @apply w-1/2 pr-4 mb-4;
   }
 }
 .torneo-videos-list{
