--- a/web/themes/custom/tailwindcss/templates/node/user.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/user.html.twig
@@ -1,5 +1,5 @@
 <div class="user compact" {{ attributes }}>
-    <div class="tw-flex tw-items-center tw-justify-center">
+    <div class="tw-flex tw-items-center">
         <div class="image">{{ content.field_image }}</div>
         <div class="nombres tw-px-2">{{ content.field_nombres }}</div>
         <div class="twitter">
