--- a/web/themes/custom/tailwindcss/templates/node/node--gol-partido--resumen-vertical.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--gol-partido--resumen-vertical.html.twig
@@ -10,7 +10,7 @@
                 <a href="{{ url }}"><img src="/themes/custom/tailwindcss/images/icons/play.png" alt="Play" class="play-icon tw-h-12 tw-w-12 opacity-100"></a>
             </div>
         </div>
-        <div class="tw-text-base">
+        <div class="tw-text-base mt-4">
             <a href="{{ url }}">{{ label }}</a>
         </div>
         <div class="mediastream tw-absolute">
