--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -48,7 +48,7 @@
 <div class="tw-bg-primary">
     <div class="tw-container tw-mx-auto tw-p-4">
         {{ page.secondary_menu }}
-        <div class="tw-flex tw-items-center tw-my-3">
+        <div class="tw-flex tw-items-center tw-mt-3">
             <div>
                 <header role="banner">
                     {{ page.header }}
