--- a/web/themes/custom/tailwindcss/src/sass/_texts.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_texts.scss
@@ -57,7 +57,9 @@ a {
     @apply my-4;
   }
 }
-
+.body{
+  line-height: 1.5em !important; 
+}
 .tags {
   @apply text-primary border-t border-b;
   .label {
