--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -149,7 +149,7 @@
             </div>
         </div>
         <div class="tw-bg-primary">
-            <div class="tw-container tw-mx-auto tw-p-2 tw-text-white">
+            <div id="footer-first" class="tw-container tw-mx-auto tw-p-2 tw-text-white">
                 {{ page.footer }}
             </div>
         </div>
