Top links menu update

--- a/web/themes/custom/tailwindcss/src/sass/_menu.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_menu.scss
@@ -5,6 +5,9 @@
       a{
         @apply uppercase text-white pr-6;
       }
+      &:last-child{
+        @apply flex-1 text-right;
+      }
     }
   }
 }
