--- a/web/themes/custom/tailwindcss/templates/node/user.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/user.html.twig
@@ -1,8 +1,8 @@
 <div class="user compact" {{ attributes }}>
-    <div class="tw-flex tw-items-center">
-        <div class="image">{{ content.field_image }}</div>
-        <div class="nombres tw-px-2">{{ content.field_nombres }}</div>
-        <div class="twitter">
+    <div class="tw-flex flex text-sm">
+        <div class="image self-center">{{ content.field_image }}</div>
+        <div class="nombres tw-px-2 self-center lead">{{ content.field_nombres }}</div>
+        <div class="twitter self-center">
             {{ content.field_twitter }}
         </div>    
     </div>
