--- a/web/themes/custom/tailwindcss/src/sass/app.scss
+++ b/web/themes/custom/tailwindcss/src/sass/app.scss
@@ -12,5 +12,6 @@ $font-title: 'Passion One', cursive;
 @import "views";
 @import "widgets";
 @import "user";
+@import "scrollbars";
 
 @tailwind utilities;
