--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -161,11 +161,14 @@
                 <div class="tw-pb-4">
                     Copyright© 2015, Bogotá - Colombia. Todos los derechos reservados.  Está prohibida la reproducción total o parcial de la página
                 </div>
-                <div class="tw-text-secondary tw-pb-4">
-                    Quiénes somos       Términos y Condiciones          Soporte Técnico Win Sports Online       Política de cookies
+                <div class="tw-text-secondary tw-pb-4 links">
+                    <a href="/">Quiénes somos</a>
+                    <a href="/terminos-condiciones">Términos y Condiciones</a>
+                    <a href="https://winsports.zendesk.com/hc/es/requests/new" target="_blank">Soporte Técnico Win Sports Online</a> 
+                    <a  href="/politica-de-cookies">Política de cookies</a>
                 </div>
-                <div class="tw-text-secondary tw-pb-4">
-                    Manual de Procedimientos y Políticas de Tratamiento de la Información
+                <div class="tw-text-secondary tw-pb-4 links">
+                    <a href="/sites/default/files/manual_procedimiento_politica_y_tratamiento_de_la_informacion.pdf" target="_blank">Manual de Procedimientos y Políticas de Tratamiento de la Información</a>
                 </div>
             </div>
         </div>
