--- a/web/themes/custom/tailwindcss/templates/node/node--article--home-destacado.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--article--home-destacado.html.twig
@@ -1,15 +1,15 @@
-<div class="article home-destacado flex mb-8" {{ attributes.addClass(classes) }}>
-    <div class="image tw-w-6/12">
+<div class="article home-destacado md:flex md:mb-8" {{ attributes.addClass(classes) }}>
+    <div class="image md:tw-w-6/12">
         {% if node.hasField('field_image') %}
             {{ content.field_image }}
         {% endif %}
     </div>
-    <div class="ml-4 tw-w-6/12">
+    <div class="md:ml-4 md:tw-w-6/12">
         {% if node.hasField('field_category') %}
             <div class="torneo category">{{ content.field_category }}</div>
         {% endif %}
-        <div class="title-article max-w-xl"><a href="{{ url }}">{{ label }}</a></div>
-        <div class="lead tw-my-4">{{ content.field_lead }}</div>
+        <div class="title-article md:max-w-xl"><a href="{{ url }}">{{ label }}</a></div>
+        <div class="lead md:tw-my-4">{{ content.field_lead }}</div>
         <div class="published_date">{{ node.getCreatedTime() | format_date('complete_date') }}</div>
     </div>
     
