--- a/web/themes/custom/tailwindcss/src/sass/app.scss
+++ b/web/themes/custom/tailwindcss/src/sass/app.scss
@@ -14,5 +14,6 @@ $font-title: 'Passion One', cursive;
 @import "user";
 @import "scrollbars";
 @import "responsive";
+@import "videos";
 
 @tailwind utilities;
