--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -1,6 +1,6 @@
 .mediastream.fixed-height{
-  height: 550px;
+  height: 550px !important;
   > div{
-    height: 550px;
+    height: 550px !important;
   } 
 }
