--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -10,7 +10,8 @@
         {{ prev }}
     </div>
     <div v-show="selected_option == 'directo'">
-        Directo
+        Drupal id: {{ drupal_matchg_id }}<br>
+        Opta id: {{ opta_matchg_id }}<br>
     </div>
     <div v-show="selected_option == 'alineaciones'">
         Alineaciones
