--- a/web/themes/custom/tailwindcss/src/sass/_widgets.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_widgets.scss
@@ -66,4 +66,10 @@
     background-color: #FACA32;
     color: rgba(11, 58, 64, 1);
   }
+  .Opta h2{
+    @apply h-auto p-4 text-primary text-3xl;
+  }
+  .Opta-Title{
+    
+  }
 }
