--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -42,12 +42,29 @@
   }
 }
 
-
 #block-views-block-equipos-del-home-block-1{
   .contextual-region{
-
+    @apply overflow-y-hidden whitespace-no-wrap flex;
+    .views-row{
+      width: 10%;
+      margin-right: .8rem;
+      -webkit-flex: none;
+      white-space: normal;
+    }
   }
 }
+
+/* #block-views-block-equipos-del-home-block-1{
+  .contextual-region{
+    display: -webkit-box;
+    overflow-y: hidden;
+    .views-row{
+      width: 12%;
+      margin-right: .8rem;
+    }
+  }
+} */
+
 /* RESPONSIVE */
 @screen md {
   #block-toplinks{
@@ -69,6 +86,20 @@
     }
     .M-lo-ultimo-slider{
       @apply hidden;
+    }
+  }
+  #block-views-block-equipos-del-home-block-1{
+    .contextual-region{
+      .views-row{
+        width: auto;
+        margin-right: 0rem;
+      }
+    }
+    div div{
+      @apply flex justify-between items-center;
+      img{
+        @apply h-10 w-10;
+      }
     }
   }
 }
