--- a/web/themes/custom/tailwindcss/src/sass/_widgets.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_widgets.scss
@@ -67,9 +67,10 @@
     color: rgba(11, 58, 64, 1);
   }
   .Opta h2{
-    @apply h-auto p-4 text-primary text-3xl;
+    @apply h-auto p-4 text-primary  bg-white;
+    .Opta-Title {
+      @apply text-3xl;
+    }
   }
-  .Opta-Title{
-    
-  }
+  
 }
