--- a/web/themes/custom/tailwindcss/src/sass/_widgets.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_widgets.scss
@@ -69,7 +69,7 @@
   .Opta h2{
     @apply h-auto p-4 text-primary  bg-white;
     .Opta-Title {
-      @apply text-3xl;
+      @apply text-3xl normal-case;
     }
   }
   
