--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -11,7 +11,10 @@
         Opta id: {{ opta_match_id }}<br>
     </div>
     <div v-show="selected_option == 'alineaciones'">
-        Alineaciones
+        <div v-if="opta_competition>0 && opta_season>0 && opta_match_id>0" class="tw-bg-gray tw-p-6">
+            <opta-widget widget="provisional_lineup" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="normal" show_match_header="true" show_crests="false" show_competition_name="false" show_images="false" show_subs="true" side="both" column_count="1" side_by_side="true" competition_naming="full" player_naming="full" team_naming="full" show_logo="false" show_title="true" breakpoints="400, 700" sport="football"></opta-widget>
+            <opta-widget widget="match_player_compare" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="normal" live="true" navigation="tabs_more" default_nav="1" show_match_header="false" show_selects="true" show_images="false" show_crests="false" show_competition_name="false" competition_naming="full" team_naming="full" player_naming="full" show_date="true" date_format="dddd D MMMM YYYY" show_logo="false" show_title="true" breakpoints="400, 700" sport="football"></opta-widget>
+        </div>
     </div>
     <div v-show="selected_option == 'estadisticas'">
         <div v-if="opta_competition>0 && opta_season>0 && opta_match_id>0" class="tw-bg-gray tw-p-6">
