--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -46,10 +46,11 @@
   .contextual-region{
     @apply overflow-y-hidden whitespace-no-wrap flex;
     .views-row{
-      width: 10%;
+      @apply inline-block;
+/*       width: 10%;
       margin-right: .8rem;
       -webkit-flex: none;
-      white-space: normal;
+      white-space: normal; */
     }
   }
 }
