--- a/web/themes/custom/tailwindcss/src/sass/app.scss
+++ b/web/themes/custom/tailwindcss/src/sass/app.scss
@@ -15,5 +15,6 @@ $font-title: 'Passion One', cursive;
 @import "scrollbars";
 @import "responsive";
 @import "videos";
+@import "articles";
 
 @tailwind utilities;
