--- a/web/themes/custom/tailwindcss/templates/node/node--article.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--article.html.twig
@@ -1,4 +1,4 @@
-<article{{ attributes.addClass('node article full') }}>
+<article{{ attributes.addClass('node article full type-' ~ node.field_tipo_de_articulo.0.target_id) }}>
     {{ title_prefix }}
     {% if not page %}
         <h2{{ title_attributes }}>
