--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -43,28 +43,15 @@
 }
 
 #block-views-block-equipos-del-home-block-1{
-  .contextual-region{
+  .M-equipos{
     @apply overflow-y-hidden whitespace-no-wrap flex;
     .views-row{
-      @apply inline-block;
-/*       width: 10%;
-      margin-right: .8rem;
-      -webkit-flex: none;
-      white-space: normal; */
+      width: 10%;
+      margin-right: .75rem;
+      flex: none;
     }
   }
 }
-
-/* #block-views-block-equipos-del-home-block-1{
-  .contextual-region{
-    display: -webkit-box;
-    overflow-y: hidden;
-    .views-row{
-      width: 12%;
-      margin-right: .8rem;
-    }
-  }
-} */
 
 /* RESPONSIVE */
 @screen md {
@@ -90,7 +77,7 @@
     }
   }
   #block-views-block-equipos-del-home-block-1{
-    .contextual-region{
+    .M-equipos{
       .views-row{
         width: auto;
         margin-right: 0rem;
