--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -51,21 +51,21 @@
     <div v-show="selected_option == 'directo'">
         <div class="tw-bg-gray tw-p-6 flex">
             <div class="tw-w-3/4 tw-bg-white tw-p-6">
-                <h2 class="title">Minuto a Minuto</h2>
-                <div v-for="event in events" class="tw-p-4 tw-border-b">
+                <h2 class="title normal-case">Minuto a Minuto</h2>
+                <div v-for="event in events" class="tw-p-4 tw-border-t tw-text-gray-600">
                     <div v-if="event.team_id == null" class="tw-flex">
-                        <div class="tw-w-2/12">
+                        <div class="tw-w-2/12 tw-flex tw-items-center tw-justify-center tw-font-bold tw-text-green">
                             {{ event.minute_label }}
-                            <img :src="'/sites/default/files/assets/img/icon/gamecast/' + imageEventsOpta(event.type) +'.png'" alt="" class="">
+                            <img :src="'/sites/default/files/assets/img/icon/gamecast/' + imageEventsOpta(event.type) +'.png'" alt="" class="tw-mx-2">
                         </div>
                         <div class="tw-w-10/12">
                             {{ event.text }}
                         </div>
                     </div>
                     <div v-if="event.team_id == opta_home_id && event.team_id != null" class="tw-flex">
-                        <div class="tw-w-2/12">
+                        <div class="tw-w-2/12 tw-flex tw-items-center tw-justify-center tw-font-bold">
                             {{ event.minute_label }}
-                            <img :src="'/sites/default/files/assets/img/icon/gamecast/' + imageEventsOpta(event.type) +'.png'" alt="" class="">
+                            <img :src="'/sites/default/files/assets/img/icon/gamecast/' + imageEventsOpta(event.type) +'.png'" alt="" class="tw-mx-2">
                         </div>
                         <div class="tw-w-10/12">
                             {{ event.text }}
@@ -75,9 +75,9 @@
                         <div class="tw-w-10/12">
                             {{ event.text }}
                         </div>
-                        <div class="tw-w-2/12">
+                        <div class="tw-w-2/12 tw-flex tw-items-center tw-justify-center tw-font-bold">
                             {{ event.minute_label }}
-                            <img :src="'/sites/default/files/assets/img/icon/gamecast/' + imageEventsOpta(event.type) +'.png'" alt="" class="">
+                            <img :src="'/sites/default/files/assets/img/icon/gamecast/' + imageEventsOpta(event.type) +'.png'" alt="" class="tw-mx-2">
                         </div>
                     </div>
                 </div>    
